; ModuleID = '/home/carl/AnghaBench/tmux/extr_window-copy.c_window_copy_cmd_copy_pipe_and_cancel.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_window-copy.c_window_copy_cmd_copy_pipe_and_cancel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.window_copy_cmd_state = type { %struct.window_mode_entry* }
%struct.window_mode_entry = type { i32 }

@WINDOW_COPY_CMD_CANCEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.window_copy_cmd_state*)* @window_copy_cmd_copy_pipe_and_cancel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @window_copy_cmd_copy_pipe_and_cancel(%struct.window_copy_cmd_state* %0) #0 {
  %2 = alloca %struct.window_copy_cmd_state*, align 8
  %3 = alloca %struct.window_mode_entry*, align 8
  store %struct.window_copy_cmd_state* %0, %struct.window_copy_cmd_state** %2, align 8
  %4 = load %struct.window_copy_cmd_state*, %struct.window_copy_cmd_state** %2, align 8
  %5 = getelementptr inbounds %struct.window_copy_cmd_state, %struct.window_copy_cmd_state* %4, i32 0, i32 0
  %6 = load %struct.window_mode_entry*, %struct.window_mode_entry** %5, align 8
  store %struct.window_mode_entry* %6, %struct.window_mode_entry** %3, align 8
  %7 = load %struct.window_copy_cmd_state*, %struct.window_copy_cmd_state** %2, align 8
  %8 = call i32 @window_copy_cmd_copy_pipe_no_clear(%struct.window_copy_cmd_state* %7)
  %9 = load %struct.window_mode_entry*, %struct.window_mode_entry** %3, align 8
  %10 = call i32 @window_copy_clear_selection(%struct.window_mode_entry* %9)
  %11 = load i32, i32* @WINDOW_COPY_CMD_CANCEL, align 4
  ret i32 %11
}

declare dso_local i32 @window_copy_cmd_copy_pipe_no_clear(%struct.window_copy_cmd_state*) #1

declare dso_local i32 @window_copy_clear_selection(%struct.window_mode_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
